<resources>
    <string name="app_name">FinalProjectVocabVenture2</string>

    <!-- String from the layout (canva) -->
    <!-- elements -->
    <string name="username">[username]</string>
    <string name="YourReport">Your Report</string>

    <!-- Overall & Performance Page -->
    <string name="OverallScore">Overall Score</string>
    <string name="Performance">Performance</string>

    <!-- Categories -->
    <string name="Basic">Basic</string>
    <string name="Intermediate">Intermediate</string>
    <string name="Advance">Advance</string>

    <!-- View Profile & Update Profile -->
    <string name="ViewProfile">View Profile</string>
    <string name="UpdateProfile">Update Profile</string>

    <!-- Navigation Bar -->
    <string name="PerformanceNavBar">Performance</string>
    <string name="HomeNavBar">Home</string>
    <string name="ProfileNavBar">Profile</string>

    <!-- Sub Categories -->
    <string name="RW">Reading and Writing</string>
    <string name="Spell">Spelling</string>
    <string name="Gram">Grammar</string>

    <!-- Final Scores -->
    <string name="BasicScore">/3</string>
    <string name="IntScore">/5</string>
    <string name="AdvScore">/5</string>

    <!-- Category Scores -->
    <string name="BasisIndvScore">1</string>
    <string name="IntIndvScore">2</string>
    <string name="AdvIndvScore">3</string>

    <!-- View Profile -->
    <string name="vpUN">username: </string>
    <string name="vpEmail">email: </string>
    <string name="vpGL">grade level: </string>
    <string name="vpPass">password: </string>
    <string name="vpLO">LOG OUT</string>

    <!-- Update Profile -->
    <string name="upDelete">Delete Account</string>
    <string name="upSC">Save Changes</string>
    <string name="upUser">username</string>
    <string name="upGL">grade level</string>
    <string name="upPass">password</string>
    <string name="upCP">confirm password</string>
    <string name="title_activity_g5_adv_grammar3">g5AdvGrammar3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_quiz_g5_basic_grammar_q2">QuizG5BasicGrammarQ2</string>
    <string name="reading">Reading</string>
    <string name="performance">Performance</string>


    <string name="Game">About VocabVenture</string>
    <string name="Objective">What is this game all about?</string>
    <string name="MainObjective">VocabVenture is a dynamic and immersive mobile application designed
        specifically to enhance English vocabulary, specifically for elementary school students in
        urban areas of the Philippines. Focusing on a holistic approach to learning, the application
        combines engaging content, interactive assessments, and personalized progress tracking to
        create a stimulating educational environment.</string>
    <string name="Player">Who are the targeted players?</string>
    <string name="TargetPlayer">The targeted player of this game are the Grade 3, 4, and 5 elementary
        students in urban areeas of the Philippines</string>
    <string name="Mechanics">How does the game work?</string>
    <string name="MainMechanics">Explore the world of words with VocabVenture! Choose your grade level
        and enjoy lessons and quizzes in reading, spelling, and grammar. Learn new words and boost your
        vocabulary skills in a fun way. After each lesson, jump into engaging quizzes to test what you have
        learned. VocabVenture turns learning into a simple and enjoyable adventure!</string>
    <string name="Point">How can I earn a point?</string>
    <string name="EarnPoints">Have a blast with our quizzes! Each quiz has 5 questions, and you can score
        2 points for each one. That is a total of 10 points for each category. Check out your scores on the
        overall score page, and see how you are doing on the performance page, which shows your progress
        after each quiz. Enjoy the fun and track your success!</string>
</resources>